feat: create a new route to get the post image
