# src/routes/post.routes.ts
@@ -5,14 +5,27 @@ import { upload } from '../middlewares/uploadMiddleware';
 
 const router = Router();
 
+// Rota pública para exibir imagem anexada ao post
+router.get('/:id/image', postController.getPostImage);
+
 router.use(authMiddleware);
 
 router.get('/', postController.list);
 router.get('/search', postController.search);
 router.get('/:id', postController.findById);
 
-router.post('/', authorizeRoles('PROFESSOR', 'ADMIN'), upload.single('image'), postController.create);
-router.put('/:id', authorizeRoles('PROFESSOR', 'ADMIN'), upload.single('image'), postController.update);
+router.post(
+  '/',
+  authorizeRoles('PROFESSOR', 'ADMIN'),
+  upload.single('image'),
+  postController.create
+);
+router.put(
+  '/:id',
+  authorizeRoles('PROFESSOR', 'ADMIN'),
+  upload.single('image'),
+  postController.update
+);
 router.delete('/:id', authorizeRoles('PROFESSOR', 'ADMIN'), postController.delete);
 
 export { router as postRoutes };
